# github-repo-observatory

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: branch-cleanup.yml  ci.yml  codeql.yml  deploy.yml  versioning.yml
app/: config.py  exceptions.py  main.py
app/api/: dashboard.py  health.py  repos.py
app/cache/: memory_cache.py  ttl_cache.py
app/frontend/static/: style.css
app/frontend/templates/: dashboard.html
app/models/: enums.py  github_types.py  metrics.py  repo.py  requests.py  validators.py
app/parsers/: action_logs.py  readme_parser.py  shield_parser.py
app/services/: actions_service.py  badge_service.py  coverage_service.py  github_client.py  quality_service.py  version_service.py
app/utils/: decorators.py  logging.py  rate_limit.py
docs/: index.md
scripts/: start_local.sh
tests/: test_api_endpoints.py  test_cache.py  test_decorators.py  test_exceptions.py  test_github_client.py  test_integration.py  test_parsers.py  test_services.py  test_version_service.py
