[project]
name = "github-repo-observatory"
version = "0.1.0"
description = "A dashboard for monitoring CI health and code quality across GitHub repositories."
authors = [
    { name = "dgaida" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "jinja2==3.1.3",
    "httpx==0.26.0",
    "python-dotenv==1.0.1",
    "beautifulsoup4==4.12.3",
    "python-multipart==0.0.9",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "black",
    "flake8",
    "isort",
    "pre-commit",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
