[project]
name = "github-repo-observatory"
version = "0.1.0"
description = "A dashboard for monitoring CI health and code quality across GitHub repositories."
authors = [
    { name = "dgaida" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "jinja2==3.1.3",
    "httpx==0.26.0",
    "python-dotenv==1.2.1",
    "beautifulsoup4==4.12.3",
    "python-multipart==0.0.9",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "mypy",
    "bandit",
    "types-all",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # assert_used

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
